pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-211-link_reference_definitions.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 123
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/211-link_reference_definitions.md
---
[32m────────────────────[0m
[33m[foo]: /url "title"
[0m[32m────────────────────[0m

[foo]
