pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-215-link_reference_definitions.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 123
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/215-link_reference_definitions.md
---
[1m[34m┄[0m[1m[34mbar[0m

]8;;file://HOSTNAME/ROOT/url\[34mfoo[0m]8;;\
